# oso-python

./: .gitignore  README.md  pyproject.toml  sample_application.py
.devcontainer/fastapi-sample-app/: devcontainer.json
.github/workflows/: cla.yml  publish.yml  test.yml
examples/fastapi/: README.md  main.py
examples/flask/: README.md  app.py
examples/starter-policy/fastapi/: README.md  sample_application.py
oso_sdk/: __init__.py  exceptions.py
oso_sdk/integrations/: __init__.py  constants.py  fastapi.py  flask.py  utils.py
oso_sdk/types/: __init__.py  conversion.py
tests/: conftest.py  test_oso_sdk.py  test_utils.py
tests/integrations/fastapi/: main.py  test_fastapi.py
tests/integrations/flask/: test_flask.py
