[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oso-client"
description = "Official Oso integrations for Python web frameworks"
readme = "README.md"
requires-python = ">=3.4"
license = "Apache-2.0"
authors = [
    { name = "Oso Team and Contributors", email = "engineering@osohq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["oso-cloud >= 1.0.0"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black == 23.1.0"]
fastapi = ["fastapi >= 0.79.0"]

[tool.hatch.version]
path = "oso_client/__init__.py"